# hackmageddon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/interim/: scrape_status.csv  timeline_urls.csv
data/processed/: hackmageddon_2023plus.csv  hackmageddon_daily_counts.csv
src/: cli.py  config.py  logging_config.py
src/clients/: http_client.py  selenium_client.py
src/discovery/: archive_discovery.py  timeline_discovery.py
src/parsers/: html_utils.py  timeline_parser.py
src/pipelines/: build_daily_counts.py  build_normalized_dataset.py  build_raw_dataset.py
src/transforms/: dates.py  dedup.py  normalize.py  taxonomy.py
src/utils/: hashing.py  io.py  validation.py
tests/: test_dates.py  test_parser.py  test_taxonomy.py  test_validation.py
